--- a/search/front/styles.css
+++ b/search/front/styles.css
@@ -99,3 +99,52 @@ li p {
 
     margin: 10px;
 }
+
+
+#pagination {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 1rem;
+    gap: 10px;
+}
+
+#prevPage, #nextPage {
+    background-color: #1DB954;
+    color: #FFFFFF;
+    padding: 0.5rem 1rem;
+    border: none;
+    border-radius: 5px;
+    font-size: 1.5rem;
+    font-weight: bold;
+    cursor: pointer;
+    outline: none;
+}
+
+#prevPage:disabled, #nextPage:disabled {
+    background-color: #808080; /* Gray out disabled buttons */
+    cursor: not-allowed;
+}
+
+#currentPage {
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+
+/* Add transitions to the buttons for a smooth animation */
+button {
+    transition: background-color 0.3s, color 0.3s;
+    font-family: 'Roboto';
+    box-shadow: 0px 5px #127736;
+}
+
+button:disabled {
+    box-shadow: 0px 5px #5a5a5a;
+}
+
+/* Apply a background color and text color when hovering over the buttons */
+button:hover {
+    background-color: #1DB954;
+    color: #FFFFFF;
+}
+
